src/objects/Favorite__c.object
<CustomObject>
    <fields>
        <fullName>CustomerNumber__c</fullName>
        <formula>Customer__r.CustomerNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>顧客No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>顧客</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>お気に入り</relationshipLabel>
        <relationshipName>Favorites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GameNumber__c</fullName>
        <formula>Game__r.GameNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ゲームNo.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Game__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ゲーム</label>
        <referenceTo>Game__c</referenceTo>
        <relationshipLabel>お気に入り</relationshipLabel>
        <relationshipName>Favorites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <formula>Game__r.Genre__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ジャンル</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>Game__r.Image__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>イメージ</label>
        <type>Text</type>
    </fields>
    <label>お気に入り</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Game__c</columns>
        <columns>Genre__c</columns>
        <columns>Customer__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>お気に入りNo.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>